# TSO

./: .env.example  .gitignore  AUDIT_PACKAGE_FINAL.md  CHANGELOG.md  CONVERSATIONAL_INTERVIEW_ARCHITECTURE.md  CRON_SETUP.md  Cargo.toml  DATABASE_ARCHITECTURE.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_LOG.md  DEPLOYMENT_SUCCESS.md  DOCUMENTATION_STATUS.md  ENGINEERING_HANDOFF.md  FEEDBACK_TRACKER.md  FRONTEND_GUIDELINES.md  IMPLEMENTATION_SUMMARY.md  INTERVIEW_WIZARD_WORKSHOP.md  LAUNCH_CHECKLIST.md  LICENSE  MULTI_RAG_ARCHITECTURE_v2.md  NFT_INTEGRATION.md  NFT_INTEGRATION_STATUS.md  NORTH_STAR.md  PRD.md  RAG_DEPLOYMENT_ANALYSIS.md  RAG_IMPLEMENTATION_SUMMARY.md  README.md  RENDER_DEPLOY.md  ROUND2_IMPLEMENTATION_COMPLETE.md  ROUND3_IMPLEMENTATION_COMPLETE.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_IMPLEMENTATION_COMPLETE.md  SECURITY_IMPLEMENTATION_FINAL.md  TAIS_North_Star.md  THINK_STAKING_INTEGRATION.md  VERCEL_DEPLOYMENT.md  VERCEL_QUICKSTART.md  (+22 more)
crates/rcrt-standalone/: Cargo.toml  install-linux.sh  install-mac.sh  install-windows.bat
crates/rcrt-standalone/src/: main.rs
demo-skills/: README.md
docs/: API.md  CROSS_APP_AGENT_PORTABILITY_PLAN.md  CTO_HYBRID_CONFIG_IMPLEMENTATION_PLAN.md  CTO_REVIEW_CROSS_APP_AGENT.md  E2E_TEST_REPORT.md  INTEGRATION_TUTORIAL.md  PERFORMANCE_BASELINE.md  POST_MORTEM_FEB20_2026.md  RCRT_INTEGRATION_ENGINEERING_PLAN.md  RCRT_SPRINT_PLAN.md  RCRT_TAIS_INTEGRATION_PRD.md  SKILL_SECURITY.md  THINK_TOKEN_ENGINEERING_PLAN.md  THINK_TOKEN_INTEGRATION_PLAN.md
examples/: skill-security-demo.ts
(+260 files in other folders)
