[package]
name = "rcrt-standalone"
version = "1.0.0"
edition = "2021"
description = "RCRT Standalone - Simple local context service"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
base64 = "0.22"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
